# django-shop

./: manage.py  pyproject.toml
src/api/v1/: routers.py  schemas.py
src/api/v1/brand/: schemas.py  views.py
src/api/v1/category/: schemas.py  views.py
src/api/v1/color/: schemas.py  views.py
src/api/v1/product/: schemas.py  views.py
src/api/v1/size/: schemas.py  views.py
src/api/v1/user/: schemas.py  views.py
src/apps/base/: admin.py  apps.py
src/apps/base/domain/: entities.py
src/apps/base/infrastructure/: models.py
src/apps/base/migrations/: 0001_initial.py
src/apps/category/: admin.py  apps.py
src/apps/category/domain/: entities.py  services.py  use_cases.py  values_object.py
src/apps/category/infrastructure/: models.py  repositories.py
src/apps/category/migrations/: 0001_initial.py
src/apps/category/services/: category.py
src/apps/product/: admin.py  apps.py
src/apps/product/admin/: __init__.py  brand.py  category.py  color.py  place_sell.py  product.py  review.py  size.py
src/apps/product/domain/: command.py  commands.py  commans.py  entities.py  services.py  use_cases.py  values_object.py
src/apps/product/infrastructure/: models.py  repositories.py
src/apps/product/migrations/: 0001_initial.py  (+1 more)
src/apps/user/: admin.py
src/core/: asgi.py  containers.py  settings.py  urls.py  wsgi.py
src/helper/: errors.py
test/: conftest.py
test/mocks/factories/: user.py
test/mocks/product/: factories.py  serivces.py
test/mocks/services/: product.py  user.py
test/use_cases/: test_product_use_case.py  test_user_use_case.py
(+56 files in other folders)
